bug updated for text field cutoff again
bug updated for text field cutoff again.. mobile phone

--- a/styles.css
+++ b/styles.css
@@ -1563,12 +1563,13 @@ body.dark .player-color-3 {
 #height-input-container input,
 #weight-input-container input {
   font-size: 2.2rem !important;
-  padding: 0.75rem 1.5rem !important;
+  padding: 0.5rem 1.5rem !important;
   width: 4.5rem !important;
-  /* height: 3.5rem !important; */
+  min-height: 3.5rem !important;
   border-width: 3px !important;
-  line-height: 1.2 !important;
+  line-height: 1.4 !important;
   box-sizing: border-box;
+  vertical-align: middle;
 }
 
 #height-input-container span,
